--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "node": "^20.6.0",
     "nodemon": "^3.0.1",
+    "razorpay": "^2.9.2",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
