--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "run": "node server.js",
-    "dev": "nodemon server.js"
+    "run": "node index.js",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
