--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,6 @@
 {
-  "version": 2,
-  "name": "native-server",
-  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/server.js" }
+  ]
 }
